--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "reactworks",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://dzsolutions.github.io/ReactWorks/",
   "dependencies": {
     "@craco/craco": "^6.1.2",
     "@headlessui/react": "^1.2.0",
