--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "reactworks",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://dzsolutions.github.io/ReactWorks/",
   "dependencies": {
     "@craco/craco": "^6.1.2",
     "@headlessui/react": "^1.2.0",
@@ -12,6 +11,7 @@
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
     "filerobot-image-editor": "^3.12.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
