--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "filerobot-image-editor": "^3.12.17",
+    "merge-images": "^2.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-easy-crop": "^3.5.1",
