--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-range": "^1.8.9",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
