--- a/package.json
+++ b/package.json
@@ -13,14 +13,19 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "filerobot-image-editor": "^3.12.17",
+    "lottie-web": "^5.7.14",
     "merge-images": "^2.0.0",
     "react": "^17.0.2",
+    "react-collapse": "^5.1.0",
     "react-dom": "^17.0.2",
     "react-easy-crop": "^3.5.1",
+    "react-loading": "^2.0.3",
     "react-range": "^1.8.9",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-select": "^4.3.1",
+    "react-usestateref": "^1.0.8",
+    "sweetalert": "^2.1.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
