--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@craco/craco": "^6.1.2",
     "@headlessui/react": "^1.4.1",
     "@heroicons/react": "^1.0.1",
-    "@material-ui/core": "^4.11.4",
+    "@material-ui/core": "^4.12.4",
     "@tailwindcss/forms": "^0.3.3",
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
@@ -19,6 +19,7 @@
     "react-collapse": "^5.1.0",
     "react-dom": "^17.0.2",
     "react-easy-crop": "^3.5.1",
+    "react-image-file-resizer": "^0.4.8",
     "react-loading": "^2.0.3",
     "react-qr-code": "^2.0.3",
     "react-range": "^1.8.9",
