update version react easy crop

--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "filerobot-image-editor": "^3.12.17",
+    "jimp": "^0.16.1",
     "lottie-web": "^5.7.14",
     "merge-images": "^2.0.0",
     "react": "^17.0.2",
     "react-collapse": "^5.1.0",
     "react-dom": "^17.0.2",
-    "react-easy-crop": "^3.5.1",
+    "react-easy-crop": "^4.4.1",
     "react-image-file-resizer": "^0.4.8",
     "react-loading": "^2.0.3",
     "react-qr-code": "^2.0.3",
